src/App.css
/* GENERAL STYLES */
.html {
  font-size: 62.5%; /* a trick to scale rem perfectly */
}


/* MOBILE-FIRST STYLES  */
.navbar-light .navbar-nav .nav-link {
  color: rgba(0,0,0,0.6);
}

.navbar-brand {
  display: block;
  text-transform: uppercase;
  font-weight: bold;
  text-align: center;
}
.hidden {
  display: block;
}
.driver-dash-link {
  display: none;
  padding: 6px 18px;
}


/* MEDIA QUERY BREAKPOINTS  */

/* Small devices (landscape phones, 576px and up) */
@media screen and (min-width: 576px) {
  .driver-dash-link {
    display: block;
  }
}

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
  
}

/* Large devices (desktops, 992px and up) */
@media screen and (min-width: 992px) {
  .hidden {
    display: none;
  }
  .navbar {
    padding: .5rem 4rem;
  }
  .navbar-brand {
    position: absolute;
    left: 50%;
    transform: translatex(-50%);
  }
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 2.5rem;
  }
}

/* Extra large devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
  
}
/*Components*/
.login-container{
  display:flex;
  flex-direction:column;
  align-content: center;
  align-items: center;
  
}
.login-element{
  padding: 1% 0%;    
} 

